# frog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/pong/: CMakeLists.txt  ball.cpp  ball.h  game_scene.cpp  game_scene.h  pong.cpp
include/frog/: button.h  camera.h  node.h  program.h  rect.h  scene.h  sprite.h  texture.h  vec.h  vec_operations.h
src/: CMakeLists.txt  button.cpp  camera.cpp  camera_renderer.cpp  camera_renderer.h  node.cpp  program.cpp  program_impl.cpp  program_impl.h  rect.cpp  renderer.h  scene.cpp  sdl_initializer.cpp  sdl_initializer.h  sdl_renderer.cpp  sdl_renderer.h  sdl_window.cpp  sdl_window.h  sprite.cpp  texture.cpp  texture_id.cpp  texture_id.h  texture_impl.cpp  texture_impl.h
