# MIT License

target_sources(${FROG_TARGET}
    PRIVATE
        button.cpp
        camera.cpp
        camera_renderer.cpp
        node.cpp
        program.cpp
        program_impl.cpp
        rect.cpp
        scene.cpp
        sdl_initializer.cpp
        sdl_renderer.cpp
        sdl_window.cpp
        sprite.cpp
        texture.cpp
        texture_id.cpp
        texture_impl.cpp
) # target_sources

# add_subdirectory(program)

# EOF
